[package]
name = "sateply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.0-rc0"
rand = "0.8.5"
rapier2d = { version = "0.17.2", features = ["simd-nightly"] }
rlua = "0.19.4"
thiserror = "1.0.40"

[patch.crates-io]
ggez = { git = 'https://github.com/ggez/ggez.git', branch = "devel"  }

[profile.dev.package.rapier3d]
opt-level = 3